Migrated to java.nio and introduced support for custom language files